button download, footer and styles

--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
 </div>
 <button id="submit" type="submit">Gerar QR Code</button>
 </form>
-
+<img class="qr-code" id="qr-code" src="" alt="QRCode">
+<button id="download">Baixar QR Code</button>
 <footer>
         <p>Desenvolvido por <a href="https://github.com/vinicius0919">Vinícius Lima</a></p>
         <div class="carroussel">
-            <img class="image-1" src="./assets/java-script.png" alt="Imagem 1" />
-            <img class="image-2" src="./assets/html.png" alt="Imagem 2" />
-            <img class="image-3" src="./assets/css-3.png" alt="Imagem 3" />
+            <img class="image-1 footer-img" src="./assets/java-script.png" alt="Imagem 1" />
+            <img class="image-2 footer-img" src="./assets/html.png" alt="Imagem 2" />
+            <img class="image-3 footer-img" src="./assets/css-3.png" alt="Imagem 3" />
         </div>
 
     <p>&copy; 2025 QRCode Maker. Todos os direitos reservados.</p>
