enhance input fields with floating placeholders and dynamic styling

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <label for="tipo">Preencha os campos abaixo</label>
       <div id="texto-fields" class="fields">
         <div class="input-container">
-          <input type="text" name="texto" />
+          <input type="text" name="texto" placeholder="Texto" />
           <span id="floating-placeholder">Texto</span>
         </div>
       </div>
 
       <div id="wifi-fields" class="hidden fields">
         <div class="input-container">
-          <input type="text" name="ssid" />
+          <input type="text" name="ssid" placeholder="SSID"/>
           <span id="floating-placeholder">SSID (Nome da Rede)</span>
         </div>
         <select name="tipo_criptografia" id="tipo_criptografia">
@@ -38,59 +38,59 @@
           <option value="unencrypted">Aberto</option>
         </select>
         <div class="input-container">
-          <input type="text" name="senha" id="senha" />
+          <input type="text" name="senha" id="senha" placeholder="Senha"/>
           <span id="floating-placeholder">Senha</span>
         </div>
       </div>
 
       <div id="url-fields" class="hidden fields">
         <div class="input-container">
-          <input type="text" name="url" />
+          <input type="text" name="url" placeholder="URL" />
           <span id="floating-placeholder">URL</span>
         </div>
       </div>
 
       <div id="contato-fields" class="hidden fields">
         <div class="input-container">
-          <input type="text" name="nome" />
+          <input type="text" name="nome" placeholder="Nome" />
           <span id="floating-placeholder">Nome</span>
         </div>
         <div class="input-container">
-          <input type="text" name="sobrenome" />
+          <input type="text" name="sobrenome" placeholder="Sobrenome" />
           <span id="floating-placeholder">Sobrenome</span>
         </div>
         <div class="input-container">
-          <input type="text" name="empresa" />
+          <input type="text" name="empresa" placeholder="Empresa" />
           <span id="floating-placeholder">Empresa</span>
         </div>
         <div class="input-container">
-          <input type="text" name="telefone" />
+          <input type="text" name="telefone" placeholder="Telefone" />
           <span id="floating-placeholder">Telefone</span>
         </div>
         <div class="input-container">
-          <input type="email" name="email" />
+          <input type="email" name="email" placeholder="Email" />
           <span id="floating-placeholder">Email</span>
         </div>
       </div>
 
       <div id="sms-fields" class="hidden fields">
         <div class="input-container">
-          <input type="text" name="telefone" />
+          <input type="text" name="telefone" placeholder="Telefone" />
           <span id="floating-placeholder">Telefone</span>
         </div>
         <div class="input-container">
-          <input type="text" name="mensagem" />
+          <input type="text" name="mensagem" placeholder="Mensagem" />
           <span id="floating-placeholder">Mensagem</span>
         </div>
       </div>
 
       <div id="email-fields" class="hidden fields">
         <div class="input-container">
-          <input type="email" name="email" />
+          <input type="email" name="email" placeholder="Email" />
           <span id="floating-placeholder">Email</span>
         </div>
         <div class="input-container">
-          <input type="text" name="assunto" />
+          <input type="text" name="assunto" placeholder="Assunto" />
           <span id="floating-placeholder">Assunto</span>
         </div>
         <textarea name="corpo" placeholder="Corpo do Email"></textarea>
@@ -98,7 +98,7 @@
 
       <div id="telefone-fields" class="hidden fields">
         <div class="input-container">
-          <input type="text" name="telefone" />
+          <input type="text" name="telefone" placeholder="Telefone" />
           <span id="floating-placeholder">Telefone</span>
         </div>
       </div>
