--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./index.css" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4331459371750222"
      crossorigin="anonymous"></script>
+     <meta name="google-adsense-account" content="ca-pub-4331459371750222">
     <title>QRCode Maker</title>
   </head>
   <body>
