update canonical URL and sitemap in robots.txt and sitemap.xml for consistency

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="qr code, gerador qr code, qr code gratuito, qr code online, qr code maker" />
     <meta name="author" content="Vinícius Lima" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://qrcodemaker-90323v5h2-vinicius-limas-projects-266dca5b.vercel.app/" />
+    <link rel="canonical" href="https://qrcodemaker-mu.vercel.app/" />
     <link rel="stylesheet" href="./index.css" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4331459371750222"
      crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
       "@type": "WebApplication",
       "name": "QRCode Maker",
       "description": "Gerador de QR Code online gratuito para criar códigos QR personalizados",
-      "url": "https://qrcodemaker-90323v5h2-vinicius-limas-projects-266dca5b.vercel.app/",
+      "url": "https://qrcodemaker-mu.vercel.app/",
       "applicationCategory": "UtilityApplication",
       "operatingSystem": "Web Browser",
       "offers": {
