feat: add new pages for About, Contact, Privacy, and Terms with corresponding styles

--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
         Desenvolvido por
         <a href="https://github.com/vinicius0919">Vinícius Lima</a>
       </p>
+      <nav class="footer-links">
+        <a href="/about.html">Sobre</a>
+        <a href="/privacy.html">Privacidade</a>
+        <a href="/terms.html">Termos</a>
+        <a href="/contact.html">Contato</a>
+      </nav>
       <div class="carroussel">
         <img
           class="image-1 footer-img"
