fix: add required attribute to input fields and manage visibility of placeholders based on selection

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <label for="tipo">Preencha os campos abaixo</label>
       <div id="texto-fields" class="fields">
         <div class="input-container">
-          <input type="text" name="texto" placeholder="Texto" />
+          <input type="text" name="texto" placeholder="Texto" required/>
           <span id="floating-placeholder">Texto</span>
         </div>
       </div>
@@ -75,7 +75,7 @@
         </select>
         <div class="input-container">
           <input type="text" name="senha" id="senha" placeholder="Senha"/>
-          <span id="floating-placeholder">Senha</span>
+          <span id="floating-placeholder" for="senha">Senha</span>
         </div>
       </div>
 
