fix: update email address in contact page for accuracy

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       </p>
       <ul>
         <li>GitHub: <a href="https://github.com/vinicius0919">github.com/vinicius0919</a></li>
-        <li>Email: (forneça um email aqui se desejar)</li>
+        <li>Email: viniciuslima0919@gmail.com</li>
       </ul>
       <p>
         <a href="/">Voltar à página inicial</a>
