fix: enhance button functionality and styling for QR code download feature

--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
         </form>
         
         <div class="qr-result">
-          <img class="qr-code" id="qr-code" src="" alt="QRCode gerado" />
-          <button id="download">Baixar QR Code</button>
+          <div id="qr-code-container">
+          </div>
+          <button id="download" disabled>Baixar QR Code</button>
         </div>
       </section>
       
