feat: add FAQ and usage instructions sections to index.html; enhance contact page with abuse reporting information

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,10 @@
       <p>
         <a href="/">Voltar à página inicial</a>
       </p>
+       <h2>Relatar abuso ou anúncios indevidos</h2>
+       <p>
+         Caso encontre um anúncio indevido ou comportamento que viole políticas, envie uma mensagem descrevendo o problema (URL da página e captura de tela, se possível) para o email acima. Responderemos e tomaremos as medidas necessárias.
+       </p>
     </main>
     <footer>
       <p>&copy; 2025 QRCode Maker. Todos os direitos reservados.</p>
