--- a/index.html
+++ b/index.html
@@ -165,6 +165,37 @@
           </div>
         </div>
       </section>
+      
+      <section class="how-to">
+        <h2>Como usar</h2>
+        <div class="page-content">
+          <p>O QRCode Maker foi pensado para ser rápido e direto. Siga estes passos:</p>
+          <ol>
+            <li>Escolha o tipo de QR Code (texto, URL, Wi‑Fi, contato, SMS, email ou telefone).</li>
+            <li>Preencha os campos requeridos no formulário (por exemplo, URL ou texto).</li>
+            <li>Clique em <strong>Gerar QR Code</strong>. O código aparecerá ao lado.</li>
+            <li>Use <strong>Baixar QR Code</strong> para salvar o arquivo em PNG e inserir onde desejar.</li>
+          </ol>
+          <p>Exemplo: para criar um QR que aponte para um site, selecione <em>URL</em>, cole o link e gere o QR. Teste o QR com a câmera do seu celular antes de usá-lo publicamente.</p>
+        </div>
+      </section>
+
+      <section class="faq">
+        <h2>Perguntas Frequentes (FAQ)</h2>
+        <div class="page-content">
+          <h3>Os QR Codes são gratuitos?</h3>
+          <p>Sim — gerar e baixar QR codes é totalmente gratuito neste site.</p>
+
+          <h3>Posso usar estes QR codes para negócios?</h3>
+          <p>Sim, os QR codes gerados podem ser usados em materiais impressos, digitais e promocionais, desde que não violem direitos de terceiros.</p>
+
+          <h3>O site coleta meus dados?</h3>
+          <p>O site não coleta dados pessoais automaticamente. Consulte nossa <a href="/privacy.html">Política de Privacidade</a> para mais detalhes.</p>
+
+          <h3>O QR é seguro?</h3>
+          <p>O scan do QR leva ao conteúdo inserido no formulário. Sempre verifique o destino antes de compartilhar QR codes publicamente.</p>
+        </div>
+      </section>
     </main>
     <footer>
       <p>
